--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,14 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
 .title p {
     font-size: 1.25rem;
     font-weight: 400;
@@ -33,7 +41,7 @@ body {
     font-weight: 600;
 }
 
-.btn {
+.button {
     padding: 12px 45px;
     font-size: 1rem;
     line-height: 30px;
@@ -41,8 +49,150 @@ body {
     border-radius: 5px;
     border: 2px solid #fff;
     transition: all 0.5s;
+    background-color: transparent;
+    color: #fff;
 }
 
-.btn:hover {
+.button:hover {
     background-color: #fff;
+    color: var(--primary-color);
+}
+
+/* HEADER */
+
+header {
+    padding: 40px 0;
+    width: 100%;
+    position: absolute;
+    z-index: 100;
+}
+
+header .navbar {
+    padding: 8px 0;
+}
+
+.header__logo a {
+    font-size: 2.25rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+.header__right {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+
+.header__form {
+    position: relative;
+    padding: 10px 50px 10px 20px;
+    font-size: 1rem;
+    font-weight: 400;
+    height: 45px;
+    background-color: var(--bg-dark-light);
+}
+
+.header__form:focus {
+    border-color: #fff;
+    box-shadow: none;
+}
+
+.header__search {
+    position: absolute;
+    right: 40px;
+    font-size: 0.9375rem;
+    color: #333;
+    cursor: pointer;
+}
+
+.header__light-dark {
+    color: #fff;
+    font-size: 1.5rem;
+    margin-left: 20px;
+}
+
+.header__searchIcon {
+    color: #fff;
+    font-size: 1.95rem;
+    margin-left: 30px;
+}
+
+header .overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(6, 3, 0, 0.77);
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+header .overlay__text li {
+    margin: 20px 0;
+}
+
+header .overlay__text a {
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #fff;
+    transition: all 0.5s;
+}
+
+header .overlay__text a:hover {
+    color: var(--primary-color);
+}
+
+header .btn__close i {
+    position: absolute;
+    font-size: 20px;
+    color: #fff;
+    top: 50px;
+    right: 50px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+/* CAROUSEL */
+
+.carousel {
+    background-image: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)), url("../img/banner1.jpg");
+    padding: 180px 0 100px;
+    background-attachment: fixed;
+}
+
+.carousel h2 {
+    font-size: 3.375rem;
+    font-weight: 600;
+    line-height: 64px;
+    color: #fff;
+}
+
+.carousel p {
+    font-size: 1rem;
+    line-height: 28px;
+    color: #fff;
+}
+
+/* ABOUT US */
+
+.aboutUs {
+    padding: 70px 0;
+}
+
+.aboutUs .title {
+    margin-bottom: 25px;
+}
+
+.aboutUs__right {
+    font-size: 1.125rem;
+    line-height: 28px;
+    color: #333;
 }
