--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ header .overlay {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(6, 3, 0, 0.77);
+    background-color: rgba(0, 0, 0, 0.5);
     top: 0;
     left: 0;
     justify-content: center;
@@ -146,7 +146,7 @@ header .overlay {
     display: none;
 }
 
-header .overlay.openMenu {
+header .overlay.open {
     display: flex;
 }
 
