--- a/css/index.css
+++ b/css/index.css
@@ -281,3 +281,66 @@ header .btn__close i {
 .restaurants__item:hover i {
     color: #ffc600;
 }
+
+/* NEW */
+
+.new {
+    padding: 100px 0;
+    background-color: var(--bg-dark-light);
+}
+
+.new .title p {
+    margin-bottom: 0;
+}
+
+.new .title h2 {
+    color: var(--text-dark-light);
+}
+
+.new__item {
+    cursor: pointer;
+}
+
+.new__img {
+    position: relative;
+}
+
+.new__img::after {
+    content: "";
+    position: absolute;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+    border-radius: 0 0 6px 6px;
+    bottom: 0;
+    left: 0px;
+    width: 100%;
+    height: 40%;
+}
+
+.new__img img {
+    width: 100%;
+    border-radius: 6px;
+    transition: all 0.5s;
+}
+
+.new__img img:hover {
+    opacity: 0.85;
+}
+
+.new__text {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+}
+
+.new__text h3 {
+    font-size: 1.375rem;
+    line-height: 30px;
+    font-weight: 700;
+}
+
+.new__text p {
+    color: #ffc600;
+    font-size: 1.125rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
