--- a/Dark/css/responsive.css
+++ b/Dark/css/responsive.css
@@ -5,13 +5,7 @@
 }
 
 @media (max-width: 992px) {
-    .restaurants__img img {
-        height: 200px;
-    }
-
-    .restaurants__left .overlay {
-        top: 48px;
-        left: 15px;
-        right: 15px;
+    .restaurants__img {
+        min-height: 200px;
     }
 }
