--- a/Light/css/responsive.css
+++ b/Light/css/responsive.css
@@ -6,12 +6,6 @@
 
 @media (max-width: 992px) {
     .restaurants__img img {
-        height: 200px;
-    }
-
-    .restaurants__left .overlay {
-        top: 48px;
-        left: 15px;
-        right: 15px;
+        min-height: 200px;
     }
 }
