--- a/Light/css/index.css
+++ b/Light/css/index.css
@@ -236,6 +236,10 @@ header .btn__close i {
     background-color: var(--primary-color);
 }
 
+.restaurants .row {
+    margin-right: auto;
+}
+
 .restaurants__img {
     background-image: url("../img/banner3.jpg");
     background-repeat: no-repeat;
