--- a/Light/css/index.css
+++ b/Light/css/index.css
@@ -115,12 +115,12 @@ header .navbar {
     height: 45px;
     background-color: var(--bg-dark-light);
     border: 1px solid var(--bg-dark-light);
-    color: #c2d0da;
+    color: rgba(22, 28, 45, 0.7);
 }
 
 .header__form:focus {
     border-color: #fff;
-    color: #c2d0da;
+    color: rgba(22, 28, 45, 0.7);
     box-shadow: none;
     background-color: var(--bg-dark-light);
     border: 1px solid var(--bg-dark-light);
@@ -130,7 +130,7 @@ header .navbar {
     position: absolute;
     right: 25px;
     font-size: 0.9375rem;
-    color: #c2d0da;
+    color: rgba(22, 28, 45, 0.7);
     cursor: pointer;
 }
 
