--- a/Light/css/index.css
+++ b/Light/css/index.css
@@ -17,7 +17,7 @@
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -393,7 +393,7 @@ header .btn__close i {
     padding: 40px 40px;
     border-radius: 8px;
     box-shadow: 0 25px 98px 0 rgba(0, 0, 0, 0.03);
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid #eee;
     transition: all 0.5s;
 }
 
