--- a/Dark/css/responsive.css
+++ b/Dark/css/responsive.css
@@ -37,10 +37,10 @@
 
 /*  */
 @media (max-width: 992px) {
-  .deliciousness_sevrvice {
+  #deliciousness .deliciousness_item {
     margin-top: 0;
   }
-}
+  }
 
 @media (max-width: 480px) {
 
